# StakCtrl

./: Cargo.toml  stakctrl.toml  stakctrl.toml.example
hosts/dockpi/: manifest.toml
hosts/dockpi/files/: boot_firmware_config.txt
src/: config.rs  git.rs  main.rs  manifest.rs  util.rs
src/cmd/: init.rs  mod.rs  snap.rs  track.rs  untrack.rs
src/collectors/: cron.rs  files.rs  mod.rs  packages.rs  systemd.rs
