[package]
name    = "stakctrl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stakctrl"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
serde   = { version = "1", features = ["derive"] }
toml    = "0.8"
chrono  = { version = "0.4", features = ["serde"] }
anyhow  = "1"
colored = "2"
